practice/k8s-infra-setup/ver1/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    tier: nginx-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deploy
      tier: nginx-front
  template:
    metadata:
      labels:
        app: nginx-deploy
        tier: nginx-front
    spec:
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: pvc-vol
        persistentVolumeClaim:
          claimName: pvc-dynamic
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d
        - name: pvc-vol
          mountPath: /var/www/html
          subPath: html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    tier: backend
spec:
  selector:
    app: nginx-deploy
    tier: nginx-front
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
      #nodePort: 30010
      #targetPort: 80
      #type: NodePort
